# rplidar_sdk_python

./: .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  README.md  WORKSPACE  pyproject.toml  setup.py
rplidar_python/: BUILD  main.cpp  pyproject.toml  setup.py
rplidar_python/bindings/: BUILD.bazel  main.cpp  main.h  rplidar_sdk.py
src/rplidar_python/: _rplidar_sdk.pyi  main.cpp  main.h  pyproject.toml  rplidar_sdk.py
underlying_sdk_build/: CMakeLists.txt
