load("//third_party/pybind11_bazel:build_defs.bzl", "pybind_extension")

pybind_extension(
    name = "_rplidar_sdk",
    srcs = glob([
        "*.cpp",
        "*.h",
    ]),
    visibility = ["//rplidar_python:__pkg__"],
    deps = [
        "@rp_lidar//sdk/sdk:rplidar_driver",
    ],
)

exports_files([
    "rplidar_sdk.py",
])
